2005-10-11  Vincent Noel  <vnoel@cox.net>

	* log_repaint.c (logview_draw_log_lines): Avoid massive slowdown
	when the log doesn't have dates.

2005-10-11  Vincent Noel  <vnoel@cox.net>

	* logview.c (logview_add_logs_from_names): Show a progress bar
	when loading logs at startup.

2005-10-11  Vincent Noel  <vnoel@cox.net>

	* logview.c (logview_add_logs_from_names): Try to open the main
	window as soon as possible.

2005-10-11  Vincent Noel  <vnoel@cox.net>

	* info.c (RepaintLogInfo): Make sure the number of lines displayed
	in the properties window is the same in the status bar.

2005-10-11  Vincent Noel  <vnoel@cox.net>

	* log_repaint.c (logview_draw_log_lines): Make sure things still
	work when a line is collapsed.

2005-10-11  Vincent Noel  <vnoel@cox.net>

	* log_repaint.c (logview_draw_log_lines): Try to avoid flicker as
	much as possible when switching logs.

2005-10-11  Vincent Noel  <vnoel@cox.net>

	* logview.c (CreateMainWin): Use fixed height mode for the
	treeview. HUGE speed win in all situations.

2005-10-11  Vincent Noel  <vnoel@cox.net>

	* log_repaint.c (logview_draw_log_lines): No need to select the
	line if monitoring.

2005-10-11  Vincent Noel  <vnoel@cox.net>

	* log_repaint.c (logview_draw_log_lines): Don't refill the whole
	model every time we redraw a log, just keep it around.

2005-10-11  Vincent Noel  <vnoel@cox.net>

	* log_repaint.c (logview_draw_log_lines): Don't redraw everything
	when monitoring a log, just add the new lines.

2005-10-11  Vincent Noel  <vnoel@cox.net>

	* logview.c (logview_menus_set_state): Fix the menu sensitivity
	logic following the recent change in monitor behavior.

2005-10-11  Vincent Noel  <vnoel@cox.net>

	* logview.c (logview_monospace_font_changed): New.
	(CreateMainWin): Listen to changes to the monospace font gconf key
	and update the window accordingly.

2005-10-06  Dennis Cranston <dennis_cranston@yahoo.com>

	* logview.c (main):  Add application name (used in window title).
