@@ -1,5 +1,10 @@
 2005-10-11  Vincent Noel  <vnoel@cox.net>
 
+	* log_repaint.c (handle_selection_changed_cb): Miserable
+	workarounds for bug #318609.
+
+2005-10-11  Vincent Noel  <vnoel@cox.net>
+
 	* log_repaint.c (logview_draw_log_lines): Avoid massive slowdown
 	when the log doesn't have dates.
 
